--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -448,7 +448,7 @@ h6 {
 # Global Footer
 --------------------------------------------------------------*/
 .footer {
-  color: var(--default-color);
+  color: var(--default-color); 
   background-color: var(--background-color);
   font-size: 14px;
   padding: 40px 0;
@@ -885,6 +885,10 @@ section,
   font-size: 14px;
   margin-bottom: 0;
   padding-right: 50px;
+}
+
+.container.section-title p {
+  font-size: 20px;
 }
 
 .portfolio .portfolio-item .portfolio-info .preview-link,
